Bug 151316 - CRASH in SwTextGridPage::CharorLineChangedHdl (gen)
Summary: CRASH in SwTextGridPage::CharorLineChangedHdl (gen)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.3 target:7.3....
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2022-10-03 18:37 UTC by Xisco Faulí
Modified: 2022-10-06 08:15 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: ["SwTextGridPage::CharorLineChangedHdl(weld::SpinButton%20&)"]
Regression By:


Attachments
bt with debug symbols (gen) (7.52 KB, text/plain)
2022-10-03 19:02 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-10-03 18:37:25 UTC
I found the steps to reproduce this issue while checking this crash:
https://crashreport.libreoffice.org/stats/signature/SwTextGridPage::CharorLineChangedHdl(weld::SpinButton%20&)
and I'm reporting it because I believe the correct way to fix it is by using 'set_sensitive' correctly.

Steps to reproduce:
1. Open writer
2. Format - Page Style
3. Select 'Grid (lines only)'
4. Type '99999999999' in max. base text size -> Lines per page is disabled
5. Select 'Grid (lines and characters)' ->  Lines per page is enabled
6. Click on Lines per page and press down arrow twice

-> Crash

Reproduced in

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: a0bc0cc81b597aa81189355a8125753d6b873cce
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2022-10-03 18:38:40 UTC
@Caolán, I thought you might be interested in this issue
Comment 2 Julien Nabet 2022-10-03 19:02:49 UTC
Created attachment 182813 [details]
bt with debug symbols (gen)

On pc Debian x86-64 with master sources updated today + gen rendering, I could reproduce this.
Remark: I can reproduce this with gen + kf5 renderings, not gtk3 because just for this one, when I do the step 5 ("Select 'Grid (lines and characters)'),   Lines per page isn't enabled, it stays disabled.
Comment 3 Xisco Faulí 2022-10-04 08:42:28 UTC
Yes, I forgot to add the 'gen' in the summary
Comment 4 Commit Notification 2022-10-05 09:54:55 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/384167ab8501ba5912068c0a9673864552d119f1

tdf#151316 recalc what dependencies should be sensitive

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2022-10-05 09:58:44 UTC
seems ok in trunk now, backport to 7-4 in gerrit
Comment 6 Julien Nabet 2022-10-05 11:01:50 UTC
On pc Debian x86-64 with master sources updated today (+gen rendering) including Caolán's patch, I don't reproduce the crash.

As usual, thank you Caolán! :-)
Comment 7 Commit Notification 2022-10-05 11:23:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/159a117c2e6d7fe768c9f76be0bc9f792ace96eb

tdf#151316 recalc what dependencies should be sensitive

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2022-10-05 12:05:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/713b19bde2dcd0a65e04bb99681e35cbfd2f25e9

tdf#151316 recalc what dependencies should be sensitive

It will be available in 7.3.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2022-10-06 08:15:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4-2":

https://git.libreoffice.org/core/commit/d16f94307a3182dcbd0ae639712d09cca208a28d

tdf#151316 recalc what dependencies should be sensitive

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.