tdf#151316 recalc what dependencies should be sensitive

Change-Id: I40f78ec151c3d5901209b8587f6152ab76d04e88
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140960
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>